[gd_scene load_steps=4 format=3 uid="uid://b8xx2iy26xmgl"]

[ext_resource type="Texture2D" uid="uid://milbvcx3daqp" path="res://assets/mothership.png" id="1_4hnu2"]
[ext_resource type="Script" path="res://enemies/mothership.gd" id="1_egxgk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yvjo7"]
size = Vector2(96, 48)

[node name="Mothership" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_egxgk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(48, 24)
texture = ExtResource("1_4hnu2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(48, 24)
shape = SubResource("RectangleShape2D_yvjo7")

[node name="Move" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Shoot" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_hit"]
[connection signal="timeout" from="Move" to="." method="_on_move_timeout"]
[connection signal="timeout" from="Shoot" to="." method="_on_shoot_timeout"]
